force-app/main/default/objects/Frota_Potencial__c/Frota_Potencial__c.object-meta.xml
<CustomObject>
    <label>Frota total do cliente</label>
    <nameField>
        <displayFormat>FP-{0000000000}</displayFormat>
        <label>Frota Potencial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frota total do cliente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>