force-app/main/default/objects/Frota_Potencial__c/fields/Ano__c.field-meta.xml
<CustomField>
    <fullName>Ano__c</fullName>
    <inlineHelpText>Informar o ano no formato AAAA</inlineHelpText>
    <label>Ano</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>