force-app/main/default/objects/Frota_Potencial__c/fields/Concorrente__c.field-meta.xml
<CustomField>
    <fullName>Concorrente__c</fullName>
    <label>Fornecedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AUTOTRAC</fullName>
            </value>
            <value>
                <fullName>BRIDGESTONE</fullName>
                <isActive>false</isActive>
                <label>BRIDGESTONE</label>
            </value>
            <value>
                <fullName>BYSAT</fullName>
            </value>
            <value>
                <fullName>CARSYSTEM</fullName>
            </value>
            <value>
                <fullName>CEABS</fullName>
            </value>
            <value>
                <fullName>CIELO</fullName>
            </value>
            <value>
                <fullName>CONFORCE</fullName>
            </value>
            <value>
                <fullName>CONTINENTAL</fullName>
                <isActive>false</isActive>
                <label>CONTINENTAL</label>
            </value>
            <value>
                <fullName>CORPVS</fullName>
            </value>
            <value>
                <fullName>FIRESTONE</fullName>
                <isActive>false</isActive>
                <label>FIRESTONE</label>
            </value>
            <value>
                <fullName>GABRER</fullName>
            </value>
            <value>
                <fullName>GOLSAT</fullName>
            </value>
            <value>
                <fullName>GOODYEAR</fullName>
                <isActive>false</isActive>
                <label>GOODYEAR</label>
            </value>
            <value>
                <fullName>ITURAN</fullName>
            </value>
            <value>
                <fullName>LINK</fullName>
            </value>
            <value>
                <fullName>LO JACK</fullName>
            </value>
            <value>
                <fullName>MEGATRANS</fullName>
            </value>
            <value>
                <fullName>MICROTRACK</fullName>
            </value>
            <value>
                <fullName>MINIMAX</fullName>
            </value>
            <value>
                <fullName>MIX</fullName>
            </value>
            <value>
                <fullName>Mix telematics</fullName>
                <isActive>false</isActive>
                <label>Mix telematics</label>
            </value>
            <value>
                <fullName>NÃO POSSUI</fullName>
            </value>
            <value>
                <fullName>Ningun</fullName>
                <isActive>false</isActive>
                <label>Ningun</label>
            </value>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>OMNILINK</fullName>
            </value>
            <value>
                <fullName>ONIXSAT</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>PIRELLI</fullName>
                <isActive>false</isActive>
                <label>PIRELLI</label>
            </value>
            <value>
                <fullName>POINTER</fullName>
            </value>
            <value>
                <fullName>PORTO SEGURO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>