force-app/main/default/objects/Frota_Potencial__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Frota_Potencial</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>