force-app/main/default/objects/Frota_Potencial__c/fields/Cross_Border__c.field-meta.xml
<CustomField>
    <fullName>Cross_Border__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cross Border</label>
    <type>Checkbox</type>
</CustomField>