force-app/main/default/objects/Frota_Potencial__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Marca do Veículo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Marca_Veiculo__c.Ativo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marca_Veiculo__c</referenceTo>
    <relationshipName>Frota_Potencial</relationshipName>
    <type>Lookup</type>
</CustomField>