force-app/main/default/objects/Frota_Potencial__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Modelo do veículo na Intranet/FIPE</description>
    <label>Modelo do Veículo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Modelo_do_Veiculo__c.Marca_Veiculo__c</field>
            <operation>equals</operation>
            <valueField>$Source.Marca__c</valueField>
        </filterItems>
        <filterItems>
            <field>Modelo_do_Veiculo__c.Ativo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Modelo_do_Veiculo__c</referenceTo>
    <relationshipName>Frota_Potencial</relationshipName>
    <type>Lookup</type>
</CustomField>