force-app/main/default/objects/Frota_Potencial__c/fields/Necessidade_de_negocio_3__c.field-meta.xml
<CustomField>
    <fullName>Necessidade_de_negocio_3__c</fullName>
    <label>Necessidade de negócio 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Conservação de carga</fullName>
            </value>
            <value>
                <fullName>Controle de custos</fullName>
            </value>
            <value>
                <fullName>Gestão de riscos</fullName>
            </value>
            <value>
                <fullName>Pontualidade</fullName>
            </value>
            <value>
                <fullName>Prevenção de acidentes</fullName>
            </value>
            <value>
                <fullName>Produtividade</fullName>
            </value>
            <value>
                <fullName>Segurança da carga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>