force-app/main/default/objects/Frota_Potencial__c/fields/Necessidade_do_negocio__c.field-meta.xml
<CustomField>
    <fullName>Necessidade_do_negocio__c</fullName>
    <label>Necessidade do negócio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Necessidade_principal</valueSetName>
    </valueSet>
</CustomField>