force-app/main/default/objects/Frota_Potencial__c/fields/Nivel_de_relacionamento__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_relacionamento__c</fullName>
    <label>Relacionamento com concorrente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excelente</fullName>
            </value>
            <value>
                <fullName>Ótimo</fullName>
            </value>
            <value>
                <fullName>Muito bom</fullName>
            </value>
            <value>
                <fullName>Bom</fullName>
            </value>
            <value>
                <fullName>Razoável</fullName>
            </value>
            <value>
                <fullName>Ruim</fullName>
            </value>
            <value>
                <fullName>Péssimo</fullName>
            </value>
            <value>
                <fullName>Sem relacionamento</fullName>
            </value>
            <value>
                <fullName>Não tem relação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>