force-app/main/default/objects/Frota_Potencial__c/fields/Outros_concorrentes__c.field-meta.xml
<CustomField>
    <fullName>Outros_concorrentes__c</fullName>
    <label>Outros concorrentes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>