force-app/main/default/objects/Frota_Potencial__c/fields/Quantidade_de_veiculos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_veiculos__c</fullName>
    <inlineHelpText>Quantidade de veículos</inlineHelpText>
    <label>Quantidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>