force-app/main/default/objects/Frota_Potencial__c/fields/Segmentacao_de_mercado__c.field-meta.xml
<CustomField>
    <fullName>Segmentacao_de_mercado__c</fullName>
    <label>Segmentação de mercado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aeroportos</fullName>
            </value>
            <value>
                <fullName>Agricultura</fullName>
            </value>
            <value>
                <fullName>Alimentos</fullName>
            </value>
            <value>
                <fullName>Alimentos e Bebidas</fullName>
            </value>
            <value>
                <fullName>Bebidas</fullName>
            </value>
            <value>
                <fullName>Cana de Açúcar</fullName>
            </value>
            <value>
                <fullName>Carga de Valor</fullName>
            </value>
            <value>
                <fullName>Carga Especial</fullName>
            </value>
            <value>
                <fullName>Carga Expressa</fullName>
            </value>
            <value>
                <fullName>Carga Refrigerada</fullName>
            </value>
            <value>
                <fullName>Carga Seca</fullName>
            </value>
            <value>
                <fullName>Carga Sólida</fullName>
            </value>
            <value>
                <fullName>Cargas Químicas e Perigosas</fullName>
            </value>
            <value>
                <fullName>Carga Viva</fullName>
            </value>
            <value>
                <fullName>Cegonheiro</fullName>
            </value>
            <value>
                <fullName>Cigarro</fullName>
            </value>
            <value>
                <fullName>Cimento e Betoneira</fullName>
            </value>
            <value>
                <fullName>Coleta de Lixo</fullName>
            </value>
            <value>
                <fullName>Combústivel</fullName>
            </value>
            <value>
                <fullName>Construção</fullName>
            </value>
            <value>
                <fullName>Construção Cívil</fullName>
            </value>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Corretora</fullName>
            </value>
            <value>
                <fullName>Distribuidora</fullName>
            </value>
            <value>
                <fullName>Eletroeletrônico</fullName>
            </value>
            <value>
                <fullName>Escolar</fullName>
            </value>
            <value>
                <fullName>FARMACÊUTICOS</fullName>
            </value>
            <value>
                <fullName>Frigorifico</fullName>
            </value>
            <value>
                <fullName>Frotas Leves</fullName>
            </value>
            <value>
                <fullName>Gás</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>