force-app/main/default/objects/Frota_Potencial__c/fields/Tipo_de_carreta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_carreta__c</fullName>
    <label>Tipo de carreta</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_ve_culo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BASCULANTE</fullName>
            </value>
            <value>
                <fullName>BAÚ</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>CANAVIEIRO</fullName>
            </value>
            <value>
                <fullName>CARGA SECA</fullName>
            </value>
            <value>
                <fullName>CARREGA TUDO</fullName>
            </value>
            <value>
                <fullName>CEGONHA</fullName>
            </value>
            <value>
                <fullName>FLORESTAL</fullName>
            </value>
            <value>
                <fullName>FRIGORÍFICO</fullName>
            </value>
            <value>
                <fullName>GELADEIRA</fullName>
            </value>
            <value>
                <fullName>GRANEL</fullName>
            </value>
            <value>
                <fullName>OUTRO</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>PORTA CONTEINER</fullName>
            </value>
            <value>
                <fullName>SIDER</fullName>
            </value>
            <value>
                <fullName>SILO</fullName>
            </value>
            <value>
                <fullName>SILO CIMENTO</fullName>
            </value>
            <value>
                <fullName>TANQUE ALIMENTAR</fullName>
            </value>
            <value>
                <fullName>TANQUE COMBUSTÍVEL</fullName>
            </value>
            <value>
                <fullName>TANQUE GÁS</fullName>
            </value>
            <value>
                <fullName>TANQUE QUÍMICO</fullName>
            </value>
            <value>
                <fullName>TRONCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>