force-app/main/default/objects/Frota_Potencial__c/fields/Tipo_de_isca__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_isca__c</fullName>
    <label>Tipo de isca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Descartável</fullName>
            </value>
            <value>
                <fullName>Descartável e retornável</fullName>
            </value>
            <value>
                <fullName>Retornável</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>