force-app/main/default/objects/Frota_Potencial__c/fields/Tipo_de_ve_culo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_ve_culo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_veiculo</valueSetName>
    </valueSet>
</CustomField>