force-app/main/default/objects/Frota_Potencial__c/fields/Vigencia_contratual__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_contratual__c</fullName>
    <label>Vigência contratual</label>
    <type>Date</type>
</CustomField>