force-app/main/default/objects/Frota_Potencial__c/recordTypes/Argentina.recordType-meta.xml
<RecordType>
    <fullName>Argentina</fullName>
    <active>true</active>
    <label>Argentina</label>
</RecordType>