force-app/main/default/objects/Frota_Potencial__c/recordTypes/Bluetec.recordType-meta.xml
<RecordType>
    <fullName>Bluetec</fullName>
    <active>true</active>
    <label>OTR</label>
</RecordType>