force-app/main/default/objects/Frota_Potencial__c/recordTypes/Cargo_Tracck.recordType-meta.xml
<RecordType>
    <fullName>Cargo_Tracck</fullName>
    <active>true</active>
    <label>Cargo Tracck</label>
</RecordType>