force-app/main/default/objects/Frota_Potencial__c/recordTypes/CORP.recordType-meta.xml
<RecordType>
    <fullName>CORP</fullName>
    <active>true</active>
    <label>CORP</label>
</RecordType>