force-app/main/default/objects/Frota_Potencial__c/recordTypes/Mercosul.recordType-meta.xml
<RecordType>
    <fullName>Mercosul</fullName>
    <active>true</active>
    <description>Tipo de registro para países do Mercosul, menos Brasil</description>
    <label>Mercosul</label>
</RecordType>