force-app/main/default/objects/Frota_Potencial__c/validationRules/ValidaAno.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaAno</fullName>
    <active>true</active>
    <description>Não é possível inserir um valor negativo.</description>
    <errorConditionFormula>AND( 
    Ano__c &lt; 0 
)</errorConditionFormula>
    <errorDisplayField>Ano__c</errorDisplayField>
    <errorMessage>Não é possível inserir um valor negativo.</errorMessage>
</ValidationRule>