force-app/main/default/objects/Frota_Potencial__c/validationRules/ValidaQuantidadeVeiculo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaQuantidadeVeiculo</fullName>
    <active>true</active>
    <description>Não é possível inserir um valor negativo.</description>
    <errorConditionFormula>AND( 
Quantidade_de_veiculos__c &lt; 0 
)</errorConditionFormula>
    <errorDisplayField>Quantidade_de_veiculos__c</errorDisplayField>
    <errorMessage>Não é possível inserir um valor negativo.</errorMessage>
</ValidationRule>