force-app/main/default/objects/Frota_Potencial__c/validationRules/ValidaValorOutrosConcorrentes.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaValorOutrosConcorrentes</fullName>
    <active>true</active>
    <description>Se o campo Outros concorrentes estiver preenchido, validar se o campo Concorrente está selecionado com a opção &quot;OUTROS&quot;.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Outros_concorrentes__c)),
    NOT(ISPICKVAL(Concorrente__c, &#39;OUTROS&#39;)) 
)</errorConditionFormula>
    <errorDisplayField>Outros_concorrentes__c</errorDisplayField>
    <errorMessage>Você só deve preencher esse campo, quando o campo &quot;Concorrente&quot; estiver com a opção &quot;OUTROS&quot;.</errorMessage>
</ValidationRule>